--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,25 @@
-/* You can add global styles to this file, and also import other style files */
+@font-face{
+    font-family: 'gistesy';
+    font-display: swap;
+    src: url('./assets/font/gystesy/Gistesy.ttf') format("truetype");
+}
+
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Merriweather', serif;
+    -moz-box-sizing: border-box;
+}
+
+input,
+a,
+button,
+div{
+    -webkit-tap-highlight-color: transparent;
+}
+
+.my-container{
+    max-width: 1300px;
+    padding: 0 20px;
+}
