coorecting horizontal scroll

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,8 @@
 <div class="landing">
-  <div class="position-relative marquee-container d-none d-sm-block">
-    <div class="marquee d-flex justify-content-around">
-      <span>The website is under construction and will be very soon available !</span>
-    </div>
-    <div class="marquee marquee2 d-flex justify-content-around">
-      <span>The website is under construction and will be very soon available !</span>
-    </div>
+  <div class="annoucement-container">
+      <span>
+        The website is under construction and will be very soon available !
+      </span>
   </div>
   <div class="hero">
     <div class="hero-content my-container">
