--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -23,7 +23,7 @@
         span{
             width: 100%;
             white-space: nowrap;
-            animation: animate 20s infinite linear;
+            animation: animate 30s infinite linear;
         }
 
         @keyframes animate {
@@ -36,9 +36,6 @@
         }
       }
       
-      
-
-
     .hero{
         display: flex;
         align-items: center;
@@ -144,12 +141,9 @@
         .annoucement-container {
             font-size: 1.1em;
             span {
-                
-                animation: marquee 15s linear infinite;
+                animation: animate 20s linear infinite;
             }
-    
           }
-
 
         .hero{
             display: flex;
@@ -196,23 +190,19 @@
                 width: 165%;
                 animation: animate 13s infinite linear;
             }
-          }
+        }
     }
 }
 
 @media all and (max-width: 425px){
 
     .landing{
-
         .hero{
-    
             .hero-content{
                 flex-direction: column;
-    
                 img{
                     width: 32vh;
                 }
-    
                 .texts{
                     width: 100%
                 }
