--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div class="landing">
   <div class="annoucement-container">
       <span>
-        The website is under construction and will be very soon available !
+        Ce site web ne sera bientôt plus disponible !
       </span>
   </div>
   <div class="hero">
